Alterando AluraFlix para OliveiraFlix

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+           <title>OliveiraFlix</title>
 </head>
 
 <body>
 
-    <header>AluraFlix</header>
+    <header>OliveiraFlix</header>
 
     <section class="chamada">
         <div class="chamada-texto">
